--- a/styles.css
+++ b/styles.css
@@ -25,4 +25,12 @@ p {
 ul{
     border-style: dotted;
 }
+
+#catpic {
+    filter: drop-shadow(10px 10px 4px darkslategray);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+}
   
